RESOLVED FIXED290900
Vimeo web app videos reset to beginning when brought back from background the first time
https://bugs.webkit.org/show_bug.cgi?id=290900
Summary Vimeo web app videos reset to beginning when brought back from background the...
Jean-Yves Avenard [:jya]
Reported 2025-04-01 21:26:38 PDT
Playing a video in Vimeo web app and putting it in background, the video will pause. Bringing it back from background will reset the playing video back to beginning. This only occurs the first time it’s brought back from background. Steps to reproduce: 1. Open Safari and navigate to Vimeo.com > Watch > Staff Picks 2. Add to Home Screen 3. Launch Vimeo web app and choose a video to play 4. While video is playing, background the video by going to Home Screen 5. Launch Vimeo web app to bring it back from background 6. Observe video resets back to beginning
Attachments
Radar WebKit Bug Importer
Comment 1 2025-04-01 21:26:47 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-04-02 04:25:33 PDT
EWS
Comment 3 2025-04-07 23:58:14 PDT
Committed 293396@main (ebca0eca47d9): <https://commits.webkit.org/293396@main> Reviewed commits have been landed. Closing PR #43457 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.