Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm
@@ -812,7 +812,7 @@ void MediaPlayerPrivateWebM::setReadyState(MediaPlayer::ReadyState state)
 
     ALWAYS_LOG(LOGIDENTIFIER, state);
     m_readyState = state;
-    
+
     if (auto player = m_player.get())
         player->readyStateChanged();
 }
@@ -1168,7 +1168,7 @@ void MediaPlayerPrivateWebM::trackDidChangeSelected(VideoTrackPrivate& track, bo
         updateDisplayLayer();
         return;
     }
-    
+
     if (isEnabledVideoTrackID(trackId)) {
         m_enabledVideoTrackID.reset();
         m_readyForMoreSamplesMap.erase(trackId);
@@ -1343,13 +1343,15 @@ void MediaPlayerPrivateWebM::flush()
     }
 }
 
-#if PLATFORM(IOS_FAMILY)
 void MediaPlayerPrivateWebM::flushIfNeeded()
 {
+#if PLATFORM(IOS_FAMILY)
     if (!m_displayLayerWasInterrupted)
         return;
 
     m_displayLayerWasInterrupted = false;
+#endif
+
     if (m_videoTracks.size())
         flushVideo();
 
@@ -1362,7 +1364,6 @@ void MediaPlayerPrivateWebM::flushIfNeeded()
     if (m_enabledVideoTrackID)
         reenqueSamples(*m_enabledVideoTrackID);
 }
-#endif
 
 void MediaPlayerPrivateWebM::flushTrack(TrackID trackId)
 {
@@ -1900,6 +1901,7 @@ void MediaPlayerPrivateWebM::invalidateVideoRenderer(VideoMediaSampleRenderer& v
 {
     videoRenderer.flush();
     videoRenderer.stopRequestingMediaData();
+    videoRenderer.notifyWhenVideoRendererRequiresFlushToResumeDecoding({ });
     if (auto renderer = videoRenderer.renderer())
         m_listener->stopObservingVideoRenderer(renderer);
 }
@@ -1945,6 +1947,10 @@ void MediaPlayerPrivateWebM::setVideoRenderer(WebSampleBufferVideoRendering *ren
         protectedThis->setHasAvailableVideoFrame(true);
         if (protectedThis->m_isGatheringVideoFrameMetadata)
             protectedThis->checkNewVideoFrameMetadata(presentationTime, displayTime);
+    });
+    videoRenderer->notifyWhenVideoRendererRequiresFlushToResumeDecoding([weakThis = ThreadSafeWeakPtr { *this }] {
+        if (RefPtr protectedThis = weakThis.get())
+            protectedThis->setLayerRequiresFlush();
     });
     configureVideoRenderer(*videoRenderer);
 }
@@ -2033,6 +2039,16 @@ void MediaPlayerPrivateWebM::isInFullscreenOrPictureInPictureChanged(bool isInFu
 #else
     UNUSED_PARAM(isInFullscreenOrPictureInPicture);
 #endif
+}
+
+void MediaPlayerPrivateWebM::setLayerRequiresFlush()
+{
+    ALWAYS_LOG(LOGIDENTIFIER);
+#if PLATFORM(IOS_FAMILY)
+    m_displayLayerWasInterrupted = true;
+#endif
+    // FIXME: Do not immediately flush the layer if the process is now backgrounded on iOS.
+    flushIfNeeded();
 }
 
 std::optional<VideoPlaybackQualityMetrics> MediaPlayerPrivateWebM::videoPlaybackQualityMetrics()
